welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: reassignment to val
	if (litMessage = Z)
                       ^